# palette

./: .gitignore  CMakeLists.txt  README.md  camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  main.cpp  material.hpp  ray.hpp  run  sphere.hpp  vec3.hpp
